bookinfo/productPage.yaml
apiVersion: v1
kind: Service
metadata:
  name: productpage
  labels:
    app: productpage
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: productpage
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: productpage-v1
  annotations: {
    kappnav.subkind: Python
  }
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: productpage
        version: v1
    spec:
      containers:
      - name: productpage
        image: kappnav/giddyup:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9080
