bookinfo/ratings.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratings
  labels:
    app: ratings
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: ratings
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings-v1
  labels:
    app: ratings
    version: v1
  annotations: {
    kappnav.subkind: Node-js
  }
spec:
  replicas: 1
  template:
    metadata:
      labels:
        version: v1
    spec:
      containers:
      - name: ratings
        image: kappnav/giddyup:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9080
