bookinfo/reviews-egress.yaml
# Copyright 2019, 2020 IBM Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


####################################
# NetworkPolicy for reivews service which denies all egress except to:
#    - all pods in kube-system (dns required)
#    - all pods in istio-system ( required)
#    - all pods in the ratings service
####################################
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: reviews-egress
  labels:
    app: bookinfo
spec:
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kube-system: ns
  - to:
    - namespaceSelector:
        matchLabels:
          istio-system: ns
  - to:
    - podSelector:
        matchLabels:
          app: ratings
  podSelector:
    matchLabels:
      app: reviews
  policyTypes:
  - Egress
